@@ -49,6 +49,7 @@ A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macro
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+..F....... [ZBX-8158] fixed disabled hosts not shown in trigger selection popup when in configuration (Krists)
 A.F....... [ZBX-8118] changed image update so that image type can not be changed after create (Krists)
 ..F....... [ZBX-7553] fixed graph not getting period when coming from screen (Krists)
 ....I..... [ZBX-7890] fixed broken make distclean (Nikolaj)
@@ -113,6 +114,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese and Slovak translat
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+..F....... [ZBX-8158] fixed disabled hosts not shown in trigger selection popup when in configuration (Krists)
 ..F....... [ZBX-7553] fixed graph not getting period when coming from screen (Krists)
 ..F....... [ZBX-8075] fixed triggers/data without application not showing in overview (Krists)
 ..F....... [ZBX-8111] fixed possible XSS in tables with vertical header row cells (Krists)
